--- a/style.css
+++ b/style.css
@@ -1,3 +1,81 @@
+/* SASS map holding the different color variables */
+/* Function created to simplify  the process of specifying colors */
+body {
+  margin: 0;
+  background-color: #e2e6fb;
+}
 
+header {
+  text-align: center;
+  background-color: #2b28d8;
+  padding: 24px;
+  border-bottom: 8px solid #FFCC00;
+}
+header h2 {
+  color: #FFCC00;
+  font-size: 40px;
+  margin: 0;
+  font-family: sans-serif;
+  text-transform: uppercase;
+}
+
+main h1 {
+  font-size: 55px;
+  text-align: center;
+  padding: 85px 0 0 0;
+  font-family: sans-serif;
+}
+main p {
+  text-align: center;
+}
+main #first-paragraph {
+  font-size: 32px;
+  font-style: italic;
+  padding: 0 0 50px 0;
+}
+main #second-paragraph {
+  font-size: 32px;
+  font-weight: bold;
+  padding: 90px 0 0 0;
+}
+main img {
+  max-width: 40%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border: 5px solid #FFCC00;
+}
+main input {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 267px;
+  height: 29px;
+  font-size: 24px;
+}
+main button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 11px;
+  margin-bottom: 150px;
+  background-color: #FFCC00;
+  width: 272px;
+  height: 35px;
+  font-size: 24px;
+}
+
+footer {
+  text-align: center;
+  background-color: #2b28d8;
+  padding: 24px;
+  border-top: 8px solid #FFCC00;
+}
+footer h2 {
+  color: #FFCC00;
+  font-size: 16px;
+  font-family: sans-serif;
+  text-transform: uppercase;
+}
 
 /*# sourceMappingURL=style.css.map */
